force-app/main/default/objects/Industry_Funding_Scheme__mdt.object
<CustomObject>
    <description>Enterprise - Industry Funding Schemes Criteria</description>
    <fields>
        <fullName>Funding_Opportunity_Query__c</fullName>
        <description>Used to Identify the Type of Funding Opportunity</description>
        <label>Funding Opportunity Query</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Scheme_Broad__c</fullName>
        <description>Funding Scheme Broad</description>
        <label>Funding Scheme Broad</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Scheme_ID__c</fullName>
        <description>Funding Scheme ID</description>
        <label>Funding Scheme ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Industry Funding Scheme</label>
    <pluralLabel>Industry Funding Schemes</pluralLabel>
</CustomObject>